migdb.qvto/transforms/tests/errors/error_addPrimitiveClass1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation error_addProperty1b(out inoutModel : ERR);

main(){
	var errorMessage : String := "Structure contains entity called Char";
	_errorLog(OrderedSet{_evolutionError(1, errorMessage, "evolution_app.qvto")});
}